<resources>
    <string name="app_name">TaxiX</string>
    <string name="regisrer_text">Let\'s start with creating your account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone umber</string>
    <string name="continue_text">Continue</string>
    <string name="title_activity_driver_home">DriverHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_maps">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
